feat: Navbar implementation

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -1,1 +1,50 @@
-<p>navbar works!</p>
+<mat-toolbar color="primary">
+  <div>
+    <p>Museum</p>
+    <div id="buttons">
+      <button
+        *ngIf="user && user.username === ''"
+        color="accent"
+        mat-raised-button
+        [routerLink]="['login']"
+      >
+      <fa-icon [icon]="faSignIn" />    
+        &nbsp;Login
+      </button>
+
+      <button color="primary" mat-raised-button [routerLink]="['home']">
+        <fa-icon [icon]="faHome" />    
+        &nbsp;Home
+      </button>
+    
+      <button *ngIf="user && user.role !== 'ROLE_COMPANY_ADMINISTRATOR'" 
+              color="primary" 
+              mat-raised-button 
+              [routerLink]="['register']"
+      >
+      <fa-icon [icon]="faUser" />    
+        &nbsp;Register
+      </button>
+      
+      <button
+        *ngIf="user && user.role === 'ROLE_REGISTERED_USER'"
+        color="primary"
+        mat-raised-button
+        [routerLink]="['userProfile']"
+      >
+      <fa-icon [icon]="faUser" />    
+        &nbsp;My profile
+      </button>
+      <button
+        *ngIf="user && user.username !== ''"
+        color="accent"
+        mat-raised-button
+        (click)="onLogout()"
+      >
+      <fa-icon [icon]="faSignOut" />    
+        &nbsp;Logout
+      </button>
+
+    </div>
+  </div>
+</mat-toolbar>
