--- a/museum-frontend/src/app/infrastructure/auth/login/login.component.html
+++ b/museum-frontend/src/app/infrastructure/auth/login/login.component.html
@@ -1,14 +1,40 @@
-<form [formGroup]="loginForm" (ngSubmit)="login()">
-  <div>
-      <mat-form-field>
-          <mat-label>Username</mat-label>
-          <input matInput formControlName="username" type="text"/>
-      </mat-form-field>
-      <mat-form-field>
-          <mat-label>Password</mat-label>
-          <input matInput formControlName="password" type="password"/>
-      </mat-form-field>
-  <button color="primary" type="submit" mat-raised-button>Login</button>
-  <p>Don't have an account yet?<a href="/register">Sign Up</a></p>
-  </div>
-</form>
+<body>
+    <div class="wrapper" [@fadeInOut]>
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
+            <h1>Login</h1>
+            <div class="input-box">
+                <input 
+                        type="text" 
+                        formControlName="username" 
+                        required
+                />
+                <label [class.active]="loginForm.get('username')?.value || focused === 'username'">Username</label>
+                <fa-icon [icon]="faUser" />    
+            </div>
+            <div class="input-box">
+                <input
+                        [type]="isPasswordVisible ? 'text' : 'password'"
+                        formControlName="password"
+                        required
+                />
+                <label [class.active]="loginForm.get('password')?.value || focused === 'password'">Password</label>
+                <fa-icon 
+                        class="login-password-eye"
+                        [icon]="isPasswordVisible ? faEyeSlash : faEye" 
+                        (click)="togglePasswordVisibility()"
+                />
+            </div>
+    
+            <button 
+                    type="submit" 
+                    class="btn" 
+                    [@buttonState]="buttonState"
+                    >Login
+            </button>
+    
+            <div class="register-link">
+                <p>Don't have an account? <a href="register">Register</a></p>
+            </div>
+        </form>
+    </div>
+</body>
