--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.html
@@ -1,1 +1,78 @@
-<p>home works!</p>
+<div class="banner">
+  <div class="overlay">
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro
+          fugiat eos eligendi optio non possimus nesciunt minima deserunt
+          aliquid totam.
+      </p>
+      <p>
+          Explore your opportunities. 
+      </p>
+  </div>
+  <div class="card-swiper">
+    <div class="card-container">
+        <h2>Explore your opportunities</h2>
+        <div class="card-group" data-index="0" data-status="active" (click)="cardGroupClicked()"> 
+            <div class="little-card card"></div>
+            
+            <div class="big-card card"></div>
+            
+            <div class="little-card card"></div>
+            
+            <div class="big-card card"></div>   
+            
+            <div class="little-card card"></div>  
+            
+            <div class="big-card card"></div>  
+            
+            <div class="little-card card"></div>  
+            
+            <div class="big-card card"></div>  
+        </div>
+        <div class="card-group" data-index="1" data-status="unknown" (click)="cardGroupClicked()"> 
+            <div class="little-card card"></div>
+            
+            <div class="big-card card"></div>
+            
+            <div class="little-card card"></div>
+            
+            <div class="big-card card"></div>   
+            
+            <div class="little-card card"></div>  
+            
+            <div class="big-card card"></div>  
+            
+            <div class="little-card card"></div>  
+            
+            <div class="big-card card"></div>  
+        </div>
+        <div class="card-group" data-index="2" data-status="unknown" (click)="cardGroupClicked()"> 
+            <div class="little-card card"></div>
+            
+            <div class="big-card card"></div>
+            
+            <div class="little-card card"></div>
+            
+            <div class="big-card card"></div>   
+            
+            <div class="little-card card"></div>  
+            
+            <div class="big-card card"></div>  
+            
+            <div class="little-card card"></div>  
+            
+            <div class="big-card card"></div>  
+        </div>
+    </div>
+    <div class="card-swiper-buttons">
+        <button id="left-button" (click)="onLeftButtonClicked()">
+            <fa-icon [icon]="faArrowLeft" />    
+        </button>
+
+        <button id="right-button" (click)="onRightButtonClicked()">
+            <fa-icon [icon]="faArrowRight" />    
+        </button>
+    </div> 
+  </div>
+</div>
