fix: Mail name change

--- a/museum-frontend/src/app/feature-modules/layout/footer/footer.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/footer/footer.component.html
@@ -17,7 +17,7 @@
               <h2>Contact</h2>
               <div class="contact-row">
                 <fa-icon class="contact-icon" [icon]="faEnvelope"/>&nbsp;&nbsp;&nbsp;
-                <a class="footer-support-items">explorer.team.service@gmail.com</a>
+                <a class="footer-support-items">museum.team.service@gmail.com</a>
               </div>
               <div class="contact-row">
                 <fa-icon class="contact-icon" [icon]="faPhone"/>&nbsp;&nbsp;&nbsp;
