fix: Home route fix

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       <button 
               color="white"
               mat-raised-button 
-              [routerLink]="['home']">
+              [routerLink]="['']">
         <fa-icon [icon]="faHome" />    
         &nbsp;Home
       </button>
@@ -23,7 +23,7 @@
       <button 
               color="white" 
               mat-raised-button 
-              [routerLink]="['home']"> 
+              [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
         <fa-icon [icon]="faInstitution" />    
         &nbsp;Exhibitions
       </button>
