--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -13,6 +13,7 @@
       </button>
 
       <button 
+              class="feat-button"
               color="white"
               mat-raised-button 
               [routerLink]="['']">
@@ -21,6 +22,7 @@
       </button>
     
       <button 
+              class="feat-button"
               color="white" 
               mat-raised-button 
               [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
@@ -29,6 +31,7 @@
       </button>
 
       <button 
+              class="feat-button"
               color="white" 
               mat-raised-button 
               [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
@@ -37,6 +40,7 @@
       </button>
 
       <button 
+              class="feat-button"
               color="white"
               mat-raised-button 
               [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
@@ -55,6 +59,7 @@
       </button>
       
       <button 
+              class="feat-button"
               *ngIf="user"
               color="white"
               mat-raised-button
