--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.css
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.css
@@ -10,7 +10,7 @@
   background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp7534685.jpg&f=1&nofb=1&ipt=9cdc9d4da9d86888fe6245ba648d7b93e88f57ab5b910151687b86cfca66d9a3&ipo=images') no-repeat;
   background-position: center;
   background-size: cover;
-  transition: background-size 0.3s ease; /* Smooth transition for background size changes */
+  transition: background-size 0.3s ease;
 
 }
 
