style: Navbar content order change

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -1,17 +1,8 @@
 <mat-toolbar color="primary">
   <div>
+    <!-- TREBA DODATI NEKI LOGO I MOZDA IZRAVNATI PARAGRAF-->
     <p>Museum</p>
     <div id="buttons">
-      <button 
-              *ngIf="user && user.username === ''"
-              color="accent"
-              mat-raised-button
-              [routerLink]="['login']"
-      >
-      <fa-icon [icon]="faSignIn" />    
-        &nbsp;Login
-      </button>
-
       <button 
               class="feat-button"
               color="white"
@@ -47,6 +38,19 @@
         <fa-icon [icon]="faCalendar" />    
         &nbsp;Events
       </button>
+    </div>
+
+    <div id="account-buttons">
+      <button 
+            class="feat-button"
+            *ngIf="user"
+            color="white"
+            mat-raised-button
+            [routerLink]="['userProfile']"
+      >
+      <fa-icon [icon]="faUser" />    
+      &nbsp;My profile
+      </button>
 
       <button 
               *ngIf="user" 
@@ -59,14 +63,13 @@
       </button>
       
       <button 
-              class="feat-button"
-              *ngIf="user"
-              color="white"
-              mat-raised-button
-              [routerLink]="['userProfile']"
+            *ngIf="user && user.username === ''"
+            color="accent"
+            mat-raised-button
+            [routerLink]="['login']"
       >
-      <fa-icon [icon]="faUser" />    
-        &nbsp;My profile
+      <fa-icon [icon]="faSignIn" />    
+      &nbsp;Login
       </button>
 
       <button *ngIf="user && user.username !== ''"
@@ -77,7 +80,6 @@
       <fa-icon [icon]="faSignOut" />    
         &nbsp;Logout
       </button>
-
     </div>
   </div>
 </mat-toolbar>
