--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.css
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.css
@@ -7,6 +7,12 @@ div {
 #buttons {
   width: auto;
   margin-left: auto;
+  width: 65%;
+}
+
+#account-buttons {
+  width: auto;
+  margin-left: auto;
 }
 
 .mat-toolbar {
