style: Background scroll reactivity addition

--- a/museum-frontend/src/app/infrastructure/auth/registration/registration.component.css
+++ b/museum-frontend/src/app/infrastructure/auth/registration/registration.component.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp1953464.jpg&f=1&nofb=1&ipt=422ba8f8bf08877cc154748f916aba5768061619f601bf9a00a4390925f9eac3&ipo=images') no-repeat;
+  background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgetwallpapers.com%2Fwallpaper%2Ffull%2F6%2Fe%2F2%2F861216-download-free-greece-widescreen-wallpaper-1920x1080-notebook.jpg&f=1&nofb=1&ipt=900d90fc7375c7f738aae7cfc547dc8861b92da5a13f88641fe8f0ec66f82315&ipo=images') no-repeat;
   background-size: cover;
   background-position: center;
 }
