--- a/museum-frontend/src/app/infrastructure/auth/login/login.component.html
+++ b/museum-frontend/src/app/infrastructure/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<body [ngStyle]="{'background-size': backgroundSize}">
     <div class="wrapper" [@fadeInOut]>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
             <h1>Login</h1>
