--- a/museum-frontend/src/app/infrastructure/auth/registration/registration.component.html
+++ b/museum-frontend/src/app/infrastructure/auth/registration/registration.component.html
@@ -1,4 +1,4 @@
-<body>
+<body [ngStyle]="{'background-size': backgroundSize}">
     <div class="wrapper" [@fadeInOut]>
         <form [formGroup]="registrationForm" (ngSubmit)="register()">
             <h1>Register</h1>
