--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.html
@@ -8,9 +8,15 @@
       </p>
   </div>
   <div class="card-container-headers">
-    <h2>Exhibitions</h2>
-    <h2>Tours</h2>
-    <h2>Events</h2>
+    <div class="wrapper">
+        <h2>Exhibitions</h2>
+    </div>
+    <div class="wrapper">
+        <h2>Tours</h2>
+    </div>
+    <div class="wrapper">
+        <h2>Events</h2>
+    </div>
   </div>
   <div class="card-container">
     <div class="card-group" data-index="0" (click)="cardGroupClicked()" [@fadeInOut]> 
