fix: Register to sign up naming changes

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -59,7 +59,7 @@
               [routerLink]="['register']"
       >
       <fa-icon [icon]="faPencilSquare" />    
-        &nbsp;Register
+        &nbsp;Sign up
       </button>
       
       <button 
