--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.css
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: clamp(30rem, 60%, 50rem);
-  height: 130%;
+  height: 175%;
   overflow: hidden;
   font-family: "Poppins", sans-serif;
   display: flex;
@@ -68,17 +68,57 @@ h2 {
   align-self: center;
   display: flex;
   flex-direction: row;
-  width: 70%;
-  gap: 20rem;
+  width: 72%;
+  gap: 30%;
   height: 7%;
 }
+
+.wrapper p {
+  padding: 5% 5%;
+}
+
+.content-description {
+  margin-top: 5%;
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  gap: 5rem;
+  height: 27%;
+}
+
+.card-buttons {
+  margin-top: 5%;
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  gap: 5rem;
+  height: 27%;
+}
+
+.btn {
+  width: 100%;
+  height: 20%;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+  margin-top: -3%;
+}
+
 
 .card-container {
   align-self: center;
   display: flex;
   flex-direction: row;
-  width: 70%;
-  gap: 20rem;
+  width: 72%;
+  gap: 30%;
 }
 
 .card-container
