--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.css
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.css
@@ -112,6 +112,12 @@ h2 {
   margin-top: -3%;
 }
 
+.btn:hover {
+  background-color: #f2f2f2; 
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  transform: scale(1.03);
+  transition: transform 300ms ease;
+}
 
 .card-container {
   align-self: center;
