style: Slogan addition

--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="overlay">
       <h1>Museum</h1>
       <p>
-        "Uncover the Past, Navigate the Present: Explore with Our Museum Information System!"
+        "Where you can experience the Journey of Time"
       </p>
   </div>
   <div class="card-container-headers">
