fix: Home routing error fix

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -16,7 +16,7 @@
               class="feat-button"
               color="white" 
               mat-raised-button 
-              [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
+              [routerLink]="['']"> <!-- PROMENITI PUTANJU -->
         <fa-icon [icon]="faInstitution" />    
         &nbsp;Exhibitions
       </button>
@@ -25,7 +25,7 @@
               class="feat-button"
               color="white" 
               mat-raised-button 
-              [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
+              [routerLink]="['']"> <!-- PROMENITI PUTANJU -->
         <fa-icon [icon]="faBinoculars" />    
         &nbsp;Tours
       </button>
@@ -34,7 +34,7 @@
               class="feat-button"
               color="white"
               mat-raised-button 
-              [routerLink]="['home']"> <!-- PROMENITI PUTANJU -->
+              [routerLink]="['']"> <!-- PROMENITI PUTANJU -->
         <fa-icon [icon]="faCalendar" />    
         &nbsp;Events
       </button>
@@ -46,8 +46,8 @@
             *ngIf="user"
             color="white"
             mat-raised-button
-            [routerLink]="['userProfile']"
-      >
+            [routerLink]="['']" 
+      >         <!-- PROMENITI PUTANJU -->
       <fa-icon [icon]="faUser" />    
       &nbsp;My profile
       </button>
