feat: See employees button addition

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -53,6 +53,18 @@
       </button>
 
       <button 
+            class="feat-button"
+            *ngIf="user"
+            color="white"
+            mat-raised-button
+            [routerLink]="['employee-view']" 
+      >         
+      <fa-icon [icon]="faAdressBook" />    
+      &nbsp;See employees
+      </button>
+
+      <button 
+              class="feat-button"
               *ngIf="user" 
               color="white"
               mat-raised-button 
