--- a/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.css
+++ b/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.css
@@ -7,12 +7,12 @@
 }
 
 .wrapper {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   border: 2px solid rgba(255, 255, 255, .2);
   /*backdrop-filter: blur(20px);
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);*/
-  color: blue;
+  color: #1b1b1b;
   border-radius: 10px;
   /* padding: 30px 40px; */ 
   gap: 15px;
@@ -24,25 +24,23 @@
 }
 
 .wrapper .input-box {
+  margin-top: 6%;
   position: relative;
   width: 100%;
   height: 10%;
-  border: 2px solid rgba(255, 255, 255, .2);
   border-radius: 40px;
 }
 
 .input-box input {
-  width: 90%;
+  width: 95%;
   height: 100%;
-  border: 2px solid rgba(255, 255, 255, .2);
   border-radius: 40px;
   font-size: 16px;
-  color: black;
-  padding: 2% 2%;
+  padding: 2% 3%;
 }
 
 .input-box input::placeholder {
-  color: black;
+  color: #1b1b1b;
 }
 
 .input-box fa-icon {
@@ -68,11 +66,11 @@
   top: -13px;
   left: 10px;
   font-size: 13px;
-  color: black;
 }
 
 .wrapper .btn {
-  width: 90%;
+  margin-top: 6%;
+  width: 45%;
   height: 45px;
   background: gray;
   border: none;
@@ -81,7 +79,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   cursor: pointer;
   font-size: 16px;
-  color: #333;
+  color: #1b1b1b;
   font-weight: 600;
 }
 
@@ -90,4 +88,9 @@
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
   transform: scale(1.03);
   transition: transform 300ms ease;
+}
+
+.wrapper .buttons {
+  display: flex;
+  gap: 10%;
 }
