--- a/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.html
+++ b/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.html
@@ -1,7 +1,7 @@
 <div class="dialogue">
   <div class="wrapper">
-    <form [formGroup]="registrationForm" (ngSubmit)="addEmployee()">
-        <h1>Sign up</h1>
+    <form [formGroup]="registrationForm" (ngSubmit)="addEmployeeButtonClicked()">
+        <h1>Add employee</h1>
         <div class="input-box">
             <input 
                     type="text" 
@@ -60,8 +60,11 @@
                     (click)="toggleRepeatPasswordVisibility()"
             />
         </div>
-  
-        <button type="submit" class="btn" [@buttonState]="buttonState">Register</button>
+        <!-- OVDE TREBA DODATI COMBO BOX ZA ROLE -->
+        <div class="buttons">
+          <button type="submit" class="btn" [@buttonState]="buttonState" (click)="addEmployeeButtonClicked()">Add</button>
+          <button type="submit" class="btn" [@buttonState]="buttonState" (click)="cancelButtonClicked()">Cancel</button>
+        </div>
     </form>
   </div>
 </div>
