fix: Forbidden error fix

--- a/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.html
+++ b/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.html
@@ -1,6 +1,6 @@
 <div class="dialogue">
   <div class="wrapper">
-    <form [formGroup]="registrationForm" (ngSubmit)="addEmployeeButtonClicked()">
+    <form [formGroup]="registrationForm">
         <h1>Add employee</h1>
         <div class="input-box">
             <input 
